# libeq

./: .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  TODO.md  consol_panic.npz  index.html  libeq_h6l.json  mkdocs.yml  objects.inv  pyproject.toml  requirements-docs.txt
.github/workflows/: build_docs.yml
docs/: index.md
docs/tutorials/: index.md
docs/tutorials/legacy_import/: index.md
explanation/: index.html
notebooks/: Zn-EDTA  computed_field_hierarcy.ipynb  cu_gly_solid.json  multidimensinal_matrix.ipynb  pyes_import.ipynb  solid_dist.ipynb  staco4.inp  test_bstac_import.ipynb  test_errors.ipynb  test_io.ipynb  test_potentiometry.ipynb  try_data.ipynb  try_distribution.ipynb  urine_a.json
reference/SUMMARY/: index.html
reference/libeq/: index.html
reference/libeq/data_structure/: index.html
reference/libeq/errors/: index.html
reference/libeq/excepts/: index.html
reference/libeq/optimizers/: index.html
reference/libeq/outer_fixed_point/: index.html
reference/libeq/parsers/: index.html
reference/libeq/solver/: index.html
reference/libeq/utils/: index.html
scripts/: gen_doc_stubs.py
search/: search_index.json
src/libeq/: __init__.py  damping.py  data_structure.py  errors.py  excepts.py  nr.py  optimizer.py  solids_solver.py  solver.py  species_conc.py  utils.py  wrappers.py
src/libeq/optimizers/: __init__.py  fitter.py  (+1 more)
tests/: test_data_structure.py  test_distribution.py  test_main.py  test_potentiometry.py  test_titration.py
tutorials/: index.html
tutorials/legacy_import/: index.html
tutorials/species_distribution/: index.html
tutorials/titration_simulation/: index.html
(+27 files in other folders)
